hphp/hack/test/typecheck/global_const14.php.exp
File "global_const14.php", line 3, characters 11-17:
Invalid expression in constant initializer (Parsing[1002])
File "global_const14.php", line 3, characters 11-17:
Illegal constant value (Naming[2023])
